# memory-serve

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  deny.toml
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
example/: Cargo.toml  build.rs
example/src/: main.rs
examples/test/: Cargo.toml
examples/test/src/: main.rs
memory-serve/: Cargo.toml  build.rs  utils.rs
memory-serve-core/: Cargo.toml
memory-serve-core/src/: asset.rs  code.rs  lib.rs  list.rs  util.rs
memory-serve-macros/: Cargo.toml
memory-serve-macros/src/: asset.rs  lib.rs  utils.rs
memory-serve/src/: asset.rs  cache_control.rs  lib.rs  util.rs
src/: asset.rs  cache_control.rs  lib.rs  load.rs  options.rs
src/util/: compression.rs  headers.rs  mod.rs  route.rs
static/: about.html  index.html
static/assets/: index.css  index.js
static/blog/: index.html
