[workspace]
members = ["memory-serve", "memory-serve-macros", "memory-serve-core"]
exclude = ["example"]
resolver = "2"

[workspace.package]
version = "1.0.0-beta.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/memory-serve"
description = "Fast static file serving for axum web applications"
publish = true

[workspace.dependencies]
memory-serve-core = { path = "./memory-serve-core", version = "1.0.0-beta.1" }
memory-serve-macros = { path = "./memory-serve-macros", version = "1.0.0-beta.1" }
