[package]
name = "memory-serve"
version = "2.0.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/tweedegolf/memory-serve"
description = "Fast static file serving for axum web applications"
publish = true

[lib]
doctest = false

[features]
force-embed = []

[dependencies]
axum = "0.8"
brotli = "8.0"
flate2 = "1.1"
mime_guess = "2.0"
sha256 = "1.6"
tracing = "0.1"
urlencoding = "2.1"
walkdir = "2.5"

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
