[package]
name = "memory-serve-core"
description = "Shared code for memory-serve and memory-serve-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
sha256.workspace = true
brotli.workspace = true
mime_guess.workspace = true
walkdir.workspace = true
urlencoding.workspace = true
