[package]
name = "memory-serve-macros"
description = "Macro for memory-serve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
brotli = "6.0"
mime_guess = "2.0"
proc-macro2 = "1.0"
sha256 = "1.4"
walkdir = "2"
tracing = "0.1"
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"], default-features = false }
