[package]
name = "memory-serve"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
force-embed = ["memory-serve-macros/force-embed"]

[dependencies]
memory-serve-core = { path = "../memory-serve-core" }
memory-serve-macros = { path = "../memory-serve-macros" }
brotli = "7.0"
flate2 = "1.0"
axum = { version = "0.7", default-features = false }
tracing = "0.1"
sha256 = "1.4"

[build-dependencies]
memory-serve-core = { path = "../memory-serve-core" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
axum = { version = "0.7" }
