[package]
name = "memory-serve"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[features]
force-embed = ["memory-serve-macros/force-embed"]

[dependencies]
memory-serve-core.workspace = true
memory-serve-macros.workspace = true
brotli.workspace = true
flate2.workspace = true
axum.workspace = true
tracing.workspace = true
sha256.workspace = true

[build-dependencies]
memory-serve-core.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
axum.workspace = true
