[package]
name = "memory-serve-test"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
memory-serve = { path = "../../memory-serve" }
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
